# wcircle

./: .gitignore  Makefile  README.md  config.ini  wcircle.service
sandbox/: readme.md
sandbox/c/: evpassthrough  libevdev_scroll.c  passthrough.c  virtual_mouse.c
sandbox/rust/wcircle/: Cargo.toml
wcircle/: Cargo.toml  config.ini  wcircle.c
wcircle/src/: config.rs  main.rs
wcircle_c/: log.txt  wcircle.c
wcircle_c/sandbox/: copy_dev  copy_dev.c  evpassthrough  passthrough.c
