[package]
name = "wcircle"
version = "0.1.0"
edition = "2024"
authors = ["Okano Shinri <n.salt2000@gmail.com>"]
description = "Circular scrolling daemon"
license = "MIT"
repository = "https://github.com/OkanoShinri/wcircle"
categories = ["accessibility", "wayland", "utility"]
keywords = ["wayland", "touchpad", "scroll", "circular"]
include = ["src/**", "dist/**", "Cargo.toml", "README.md"]

[dependencies]
evdev = "0.13"
uinput = "0.1"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
serde = { version = "1", features = ["derive"] }
toml = "0.9"
dirs = "6.0"

[[bin]]
name = "wcircle_init"
path = "src/bin/wcircle_init.rs"
